{
  "version": 4,
  "terraform_version": "0.12.8",
  "serial": 215,
  "lineage": "fed35dd5-2fed-bb95-d9ea-f4172130b0ff",
  "resources": [
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:subnet/subnet-1f90b678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.31.0.0/20",
            "default_for_az": true,
            "id": "subnet-1f90b678",
            "map_public_ip_on_launch": true,
            "owner_id": "096653950110",
            "state": "available",
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:subnet/subnet-9d634fb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.31.80.0/20",
            "default_for_az": true,
            "id": "subnet-9d634fb3",
            "map_public_ip_on_launch": true,
            "owner_id": "096653950110",
            "state": "available",
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "az_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:subnet/subnet-30d3227d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "default_for_az": true,
            "id": "subnet-30d3227d",
            "map_public_ip_on_launch": true,
            "owner_id": "096653950110",
            "state": "available",
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:vpc/vpc-deddafa4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-614de81c",
            "default_route_table_id": "rtb-4e37ce30",
            "default_security_group_id": "sg-92e3b3ce",
            "dhcp_options_id": "dopt-26f2ed5d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-deddafa4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-4e37ce30",
            "owner_id": "096653950110"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ecb1463f8f1ee4b",
            "arn": "arn:aws:ec2:us-east-1:096653950110:instance/i-09fefb91486887006",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo2-host",
            "id": "i-09fefb91486887006",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo2-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-00d2115814c877371",
            "private_dns": "ip-172-31-5-105.ec2.internal",
            "private_ip": "172.31.5.105",
            "public_dns": "ec2-18-206-152-244.compute-1.amazonaws.com",
            "public_ip": "18.206.152.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0e6c0132bf10f4dbd",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo2-common",
              "demo2-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-1f90b678",
            "tags": {
              "Name": "demo2-control_plane-1",
              "kubernetes.io/cluster/demo2": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a5cc59e373cdf772",
              "sg-0e42e5a52af131f8a"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ecb1463f8f1ee4b",
            "arn": "arn:aws:ec2:us-east-1:096653950110:instance/i-095220d150af9be27",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo2-host",
            "id": "i-095220d150af9be27",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo2-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d40576ca9a8f90dc",
            "private_dns": "ip-172-31-88-211.ec2.internal",
            "private_ip": "172.31.88.211",
            "public_dns": "ec2-100-24-44-42.compute-1.amazonaws.com",
            "public_ip": "100.24.44.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00fce6d9cbaa3b71f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo2-common",
              "demo2-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-9d634fb3",
            "tags": {
              "Name": "demo2-control_plane-2",
              "kubernetes.io/cluster/demo2": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a5cc59e373cdf772",
              "sg-0e42e5a52af131f8a"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05ecb1463f8f1ee4b",
            "arn": "arn:aws:ec2:us-east-1:096653950110:instance/i-09943209d7ee12e3f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": true,
            "get_password_data": false,
            "iam_instance_profile": "demo2-host",
            "id": "i-09943209d7ee12e3f",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "demo2-deployer-key",
            "monitoring": false,
            "primary_network_interface_id": "eni-026928397a30000e8",
            "private_dns": "ip-172-31-16-138.ec2.internal",
            "private_ip": "172.31.16.138",
            "public_dns": "ec2-54-144-97-133.compute-1.amazonaws.com",
            "public_ip": "54.144.97.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d1a379daa4a6a91c",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "demo2-common",
              "demo2-control_planes"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-30d3227d",
            "tags": {
              "Name": "demo2-control_plane-3",
              "kubernetes.io/cluster/demo2": "shared"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a5cc59e373cdf772",
              "sg-0e42e5a52af131f8a"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.profile",
            "aws_key_pair.deployer",
            "aws_security_group.common",
            "aws_security_group.control_plane",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:loadbalancer/net/demo2-api-lb/f0991b005dc98fc8",
            "arn_suffix": "net/demo2-api-lb/f0991b005dc98fc8",
            "dns_name": "demo2-api-lb-f0991b005dc98fc8.elb.us-east-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:loadbalancer/net/demo2-api-lb/f0991b005dc98fc8",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "demo2-api-lb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-1f90b678"
              },
              {
                "subnet_id": "subnet-30d3227d"
              },
              {
                "subnet_id": "subnet-9d634fb3"
              }
            ],
            "subnets": [
              "subnet-1f90b678",
              "subnet-30d3227d",
              "subnet-9d634fb3"
            ],
            "tags": {
              "Cluster": "demo2",
              "kubernetes.io/cluster/demo2": "shared"
            },
            "vpc_id": "vpc-deddafa4",
            "zone_id": "Z26RNL4JYFTOTI"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:listener/net/demo2-api-lb/f0991b005dc98fc8/97f6b1a886ea1fb1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo2-api/c4b0306352d59c37",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:listener/net/demo2-api-lb/f0991b005dc98fc8/97f6b1a886ea1fb1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:loadbalancer/net/demo2-api-lb/f0991b005dc98fc8",
            "port": 6443,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "control_plane_api",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo2-api/c4b0306352d59c37",
            "arn_suffix": "targetgroup/demo2-api/c4b0306352d59c37",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo2-api/c4b0306352d59c37",
            "lambda_multi_value_headers_enabled": false,
            "name": "demo2-api",
            "port": 6443,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "control_plane_api",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo2-api/c4b0306352d59c37-20190921005709729000000001",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo2-api/c4b0306352d59c37",
            "target_id": "i-09fefb91486887006"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo2-api/c4b0306352d59c37-20190921005709793300000003",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo2-api/c4b0306352d59c37",
            "target_id": "i-095220d150af9be27"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo2-api/c4b0306352d59c37-20190921005709766800000002",
            "port": 6443,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:096653950110:targetgroup/demo2-api/c4b0306352d59c37",
            "target_id": "i-09943209d7ee12e3f"
          },
          "depends_on": [
            "aws_instance.control_plane",
            "aws_lb_target_group.control_plane_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:security-group/sg-0a5cc59e373cdf772",
            "description": "cluster common rules",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a5cc59e373cdf772",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "demo2-common",
            "name_prefix": null,
            "owner_id": "096653950110",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo2": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:096653950110:security-group/sg-0e42e5a52af131f8a",
            "description": "cluster control_planes",
            "egress": [],
            "id": "sg-0e42e5a52af131f8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              }
            ],
            "name": "demo2-control_planes",
            "name_prefix": null,
            "owner_id": "096653950110",
            "revoke_rules_on_delete": false,
            "tags": {
              "kubernetes.io/cluster/demo2": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-deddafa4"
          }
        }
      ]
    }
  ]
}